# Youtubot

./: .gitignore  Dockerfile  LICENSE  Readme.md  app.py  docker-compose.yml  pyproject.toml
config/: prompts.yaml  settings.yaml
services/: rag_service.py  tts.py  web_search_service.py
src/Youtubot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/core/: config.py  models.py
